--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ openai==0.27.8
 youtube-dl==2021.12.17
 yt-dlp==2024.7.7
 
-ffmpeg-python==0.2.0 
+ffmpeg-python==0.2.0
+git+https://github.com/openai/whisper.git
